--- a/cpp/_posts/2023-10-05-cpp-start.md
+++ b/cpp/_posts/2023-10-05-cpp-start.md
@@ -1,116 +1,21 @@
 ---
 layout: post
-title: Hydejack, Stripe-ified
-image: /assets/img/blog/jj-ying.jpg
-accent_image: 
-  background: url('/assets/img/blog/jj-ying.jpg') center/cover
-  overlay: false
-accent_color: '#ccc'
-theme_color: '#ccc'
+title: cpp-01-intro
 description: >
-  Version 9.1 provides minor design changes, new features, and closes multiple issues.
-invert_sidebar: true
+  오늘부터 시작. C++을 잘하고 싶다.
+sitemap: false
+hide_last_modified: true
 ---
 
-# What's New in Hydejack 9.1?
+펄어비스 (_Pearl Abyss_) 테크 인턴을 5일 앞두고, 기본기가 너무나도 부족한 상태로 붙었다는 것을 느꼈다. 
+> 솔직히 연구실에서 그래픽스를 공부하지 않고, 논문이 없었더라면 그냥 보지도 않고 탈락했을거라 예상한다.
 
-What's New in Hydejack 9.1?
+앞으로 내가 어떤 개발자가 될지는 모르겠지만, 현재로서는 _Rendering Engineer_ 가 되고 싶다는 생각이 있다. 하지만, 렌더링 이전에 C++의 레벨이 너무나도 낮고 개발 경험이 부족하다는 것을 깨닫고 공부를 깊고 꼼꼼하게 해야겠다는 생각을 하였다.
 
-* toc
-{:toc}
+> 사실 [_코드없는 프로그래밍_](https://www.youtube.com/@user-pw9fm4gc7e) 이라는 유투브 채널을 좋아하고 [_Modern CPP_](https://www.nocodeprogram.com/lecture/1/43805/) 강의를 전부 다 보기도 하였다. 하지만, 실제로 적용을 해보지 않으니 오래남지 않는다는 생각을 했다.
 
+아무튼 오늘부터 차근차근 시작해보려고 하며, 블로그 포스팅도 습관화 할 예정이다.
 
-## Stripe-ified Design
-Most elements now have rounded borders, making the design look more modern (dare I say "Stripe-ified") than ever before. 
-
-The goal of Hydejack was always to provide a theme that looks "designed" combined the amenities of a typical Jekyll theme for coders.
-This is an important step in maintaining this goal.
-
-At the same time, I'm introducing nerdy elements like [breadcrumbs](#serp-breadcrumbs), that are almost ornamental in nature.
-You wouldn't find these on other Stripe-like designs, but I think they are appealing to developer types like myself. 
-Like most additions to Hydejack, they can be disabled via configuration. 
-
-
-## Inverted Sidebars
-The colors on the sidebar can now be inverted to allow brighter sidebar images. This can be enabled per-page in the fort matter:
-
-```yml
-invert_sidebar: true
-```
-
-
-## Code Block Headers
-Code blocks can now have headers:
-
-~~~js
-// file: 'hello-world.js'
-console.log('Hello World!');
-~~~
-
-Headers are added by making the first line a comment of the form `(file|title): ['"].*['"]`, e.g.:
-
-    ~~~js
-    // file: 'hello-world.js'
-    console.log('Hello World!');
-    ~~~
-    
-Code blocks with and without headers now also come with a copy button. 
-In the case of header-less code blocks, the button only shows on hover to prevent potential overlap.
-
-
-## Resume Download Buttons
-Resumes can now have download buttons:
-
-![Download Buttons](/assets/img/blog/9.1.0-3.png){:.border.lead width="1776" height="258" loading="lazy"}
-
-Resumes can now have download buttons.
-{:.figcaption}
-
-The documentation has been updated with a chapter on [how to configure the buttons](/docs/basics/#downloads).
-
-
-## SERP Breadcrumbs
-Added breadcrumbs above page title:
-
-![Breadcrumbs](/assets/img/blog/9.1.0-2.png){:.border.lead width="1588" height="164" loading="lazy"}
-
-Bread crumbs are now shown above each page title.
-{:.figcaption}
-
-Note that this requires a [directory-like URL structure](https://qwtel.com/posts/software/urls-are-directories/) on your entire site, 
-otherwise the intermediate links will point to nonexisting sites.
-
-On a side note, Hydejack now has built-in tooltips for abbreviations like SERP (activated via tap/click).
-See [Example Content](/blog/hyde/2012-02-07-example-content/#inline-html-elements) on how to add them to your content.
-
-
-## Last Modified At
-Blog posts can now have a "last modified at" date in the sub title row.
-
-![Last modified at](/assets/img/blog/9.1.0-1.png){:.border.lead width="1254" height="218" loading="lazy"}
-
-Note that this depends on the `last_modified_at` property of the page, which must be either set manually in the frontmatter (not recommended), or via a plugin like [`jekyll-last-modified-at`](https://github.com/gjtorikian/jekyll-last-modified-at). Note that the later is not available when building on GitHub Pages and can increase build times.
-
-
-## Clap Button Preview
-I've been trying something new with [**getclaps.app**](https://getclaps.app/), a feedback and analytics tool for personal sites like those powered by Hydejack. 
-
-<!-- <clap-button style="--clap-button-color:var(--body-color);margin:2rem auto 3rem;width:3rem;height:3rem;font-size:smaller" nowave></clap-button> -->
-
-It is a separate product from Hydejack and not enabled by default. Because it depends on a backend component, it requires a monthly fee. 
-If enabled, it is placed below posts and pages where the dingbat character (❖) used to be.
-
-I can't claim that this product is fully baked (feedback welcome), but I've been using it on my personal site and here for the last couple of months with no issues.
-For more, see [the dedicated website](https://getclaps.app/).
-
-***
-{:style="margin:2rem 0"}
-
-There are many more changes and bugfixes in 9.1. See the [CHANGELOG](/CHANGELOG/){:.heading.flip-title} for details.
-
-
-## Credits
-
-<span>Photo by <a href="https://unsplash.com/@jjying?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">JJ Ying</a> on <a href="https://unsplash.com/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
-
-*[SERP]: Search Engine Results Page
+*[HTML]: HyperText Markup Language
+*[CSS]: Cascading Style Sheets
+*[JS]: JavaScript
